tests/snapshots/examples_fixtures/type_system__failing__182_list_comprehension_missing_left_arrow.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/182_list_comprehension_missing_left_arrow.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Generator Name

Expected generator identifier before `<-` in list comprehension.

  examples/type_system/failing/182_list_comprehension_missing_left_arrow.flx:20:15
   |
20 | let xs = [x | <- [1, 2, 3]]
   |               ^^

Hint:
  List comprehensions use `[expr | name <- source, ...]`.
== stdout ==
<not executed>
